# discord-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt
.github/workflows/: clippy.yaml  rust_deploy.yaml
bot/: __init__.py  __main__.py  bot.py
bot/cogs/: __init__.py  bingo_card.py  dot_remover.py  eval.py  latex.py  responder.py  roles.py  starboard.py  welcome.py
bot/static/: constants.py
bot/utils/: classes.py  functions.py
src/: lib.rs  main.rs
src/commands/: bingo.rs  bingo_words.txt  bingo_words.txt.new  eval.rs  latex.rs  mod.rs  randomstar.rs
src/events/: dot_remover.rs  dot_remover_algorithm.md  mod.rs  star.rs
src/structures/: mod.rs  starboard.rs
