[package]
name = "sheffbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.2"
tracing = "0.1.23"
tracing-subscriber = "0.3"
urlencoding = "2.1.3"

[dependencies.reqwest]
version = "0.11.23"
features = ["json"]

[dependencies.serenity]
version = "0.12"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.mongodb]
version = "2.8.0"
default-features = false
features = ["async-std-runtime"]
